# douban-cli

./: .gitignore  README.md  pyproject.toml
douban_cookie/: __init__.py  browser.py  check.py  cli.py  cookies.py  envfile.py  login.py  movie.py  qr_login.py  remote_control.py
tests/: test_browser.py  test_check.py  test_cli.py  test_cookies.py  test_envfile.py  test_movie.py  test_qr_login.py
