[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "douban-cookie"
version = "0.1.0"
description = "Login to Douban with account/password and save local cookies."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.44",
]

[project.scripts]
douban-cookie = "douban_cookie.cli:main"

[tool.setuptools.packages.find]
include = ["douban_cookie*"]
